--- a/RestockList/View/Base.lproj/Main.storyboard
+++ b/RestockList/View/Base.lproj/Main.storyboard
@@ -1571,8 +1571,27 @@
                                                 <color key="textColor" name="FontColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EzX-Aj-dTN">
+                                                <rect key="frame" x="20" y="697" width="374" height="70"/>
+                                                <color key="backgroundColor" name="AccentColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="1Lf-di-8JK"/>
+                                                    <constraint firstAttribute="height" constant="70" id="PGk-zZ-Opx"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="過去の購入を復元">
+                                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="AddButtonTapped:" destination="NPC-Ev-kK3" eventType="touchUpInside" id="HF5-Ip-ghg"/>
+                                                    <action selector="ButtonTapped:" destination="cXf-2x-mZ1" eventType="touchUpInside" id="cId-FG-PTF"/>
+                                                    <action selector="restoreButtonTapped:" destination="cXf-2x-mZ1" eventType="touchUpInside" id="u2e-Kj-CSX"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <constraints>
+                                            <constraint firstItem="EzX-Aj-dTN" firstAttribute="top" secondItem="S7b-LR-RJZ" secondAttribute="bottom" constant="20" id="4MY-Df-DRN"/>
                                             <constraint firstItem="S7b-LR-RJZ" firstAttribute="leading" secondItem="Ptk-K1-utD" secondAttribute="leading" constant="20" id="8TJ-e7-87o"/>
                                             <constraint firstItem="S7b-LR-RJZ" firstAttribute="top" secondItem="r0O-O9-uT8" secondAttribute="bottom" constant="20" id="E8T-Iz-FHw"/>
                                             <constraint firstItem="mYf-gW-UYC" firstAttribute="leading" secondItem="Ptk-K1-utD" secondAttribute="leading" constant="20" id="Fbb-5o-Zno"/>
@@ -1585,7 +1604,9 @@
                                             <constraint firstItem="mYf-gW-UYC" firstAttribute="top" secondItem="Xdg-Xt-Ihn" secondAttribute="bottom" constant="20" id="fOt-mB-nmT"/>
                                             <constraint firstItem="nMv-Mu-uYT" firstAttribute="top" secondItem="tRZ-L0-SCH" secondAttribute="bottom" constant="20" id="gin-nL-OT0"/>
                                             <constraint firstAttribute="trailing" secondItem="S7b-LR-RJZ" secondAttribute="trailing" constant="20" id="gmv-Pq-IBn"/>
+                                            <constraint firstItem="EzX-Aj-dTN" firstAttribute="leading" secondItem="Ptk-K1-utD" secondAttribute="leading" constant="20" id="h8D-5f-LNm"/>
                                             <constraint firstItem="nMv-Mu-uYT" firstAttribute="leading" secondItem="Ptk-K1-utD" secondAttribute="leading" constant="20" id="kuq-J3-lJJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="EzX-Aj-dTN" secondAttribute="trailing" constant="20" id="nTf-cQ-cTO"/>
                                             <constraint firstItem="tRZ-L0-SCH" firstAttribute="top" secondItem="Ptk-K1-utD" secondAttribute="top" constant="20" id="nXr-SZ-AVX"/>
                                             <constraint firstAttribute="trailing" secondItem="nMv-Mu-uYT" secondAttribute="trailing" constant="20" id="otT-cv-9aI"/>
                                             <constraint firstItem="Xdg-Xt-Ihn" firstAttribute="top" secondItem="nMv-Mu-uYT" secondAttribute="bottom" constant="20" id="q5i-xh-siN"/>
@@ -1619,6 +1640,7 @@
                     <navigationItem key="navigationItem" title="Proをアンロック" id="l6y-8R-ao9"/>
                     <connections>
                         <outlet property="button" destination="S7b-LR-RJZ" id="Gmr-mq-mjn"/>
+                        <outlet property="restoreButton" destination="EzX-Aj-dTN" id="SPc-lT-cJA"/>
                         <outletCollection property="image" destination="nMv-Mu-uYT" collectionClass="NSMutableArray" id="HAu-8F-shg"/>
                         <outletCollection property="image" destination="mYf-gW-UYC" collectionClass="NSMutableArray" id="Rle-6v-Q3i"/>
                         <outletCollection property="iconBackground" destination="tRZ-L0-SCH" collectionClass="NSMutableArray" id="7fR-lf-X25"/>
@@ -1666,10 +1688,10 @@
             <color red="0.082000002264976501" green="0.70999997854232788" blue="0.38400000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor1">
-            <color red="0.082000002264976501" green="0.70999997854232788" blue="0.38400000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.082352941176470587" green="0.70980392156862748" blue="0.3843137254901961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor2">
-            <color red="0.0" green="0.45882352941176469" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.45899999141693115" blue="0.71799999475479126" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor3">
             <color red="0.25882352941176473" green="0.27058823529411763" blue="0.6470588235294118" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1681,7 +1703,7 @@
             <color red="0.8666666666666667" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor6">
-            <color red="0.85490196078431369" green="0.32156862745098042" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.85500001907348633" green="0.32199999690055847" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="BackgroundColor">
             <color red="0.94509803921568625" green="0.94509803921568625" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
